--- a/package.json
+++ b/package.json
@@ -1,25 +1,28 @@
 {
-  "name": "@webDevShelly Portfolio",
-  "version": "1.2.3",
-  "description": "Hi, I'm Shelly aka @webDevShelly!",
-  "main": "gulpfile.js",
-  "dependencies": {},
-  "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "browser-sync": "^2.18.6",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^7.0.0",
-    "gulp-concat": "^2.6.1",
-    "gulp-jshint": "^2.0.4",
-    "gulp-sass": "^3.0.0",
-    "gulp-sourcemaps": "^1.9.1",
-    "jshint": "^2.9.4",
-    "jshint-stylish": "^2.2.1"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "@webDevShelly <webDevShelly@gmail.com>",
-  "babel": {}
+	"name": "@webDevShelly Portfolio",
+	"version": "1.2.3",
+	"description": "Hi, I'm Shelly aka @webDevShelly!",
+	"main": "gulpfile.js",
+	"devDependencies": {
+		"babel-core": "^6.26.0",
+		"babel-preset-env": "^1.6.1",
+		"browser-sync": "^2.18.6",
+		"gulp": "^4.0.0",
+		"gulp-babel": "^7.0.0",
+		"gulp-concat": "^2.6.1",
+		"gulp-jshint": "^2.0.4",
+		"gulp-sass": "^3.0.0",
+		"gulp-sourcemaps": "^1.9.1",
+		"jshint": "^2.9.4",
+		"jshint-stylish": "^2.2.1"
+	},
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"preinstall": "npx npm-force-resolutions"
+	},
+	"author": "@webDevShelly <webDevShelly@gmail.com>",
+	"babel": {},
+	"resolutions": {
+		"graceful-fs": "^4.2.4"
+	}
 }
